common/gatekeeper-policies/tests/fixtures/GkIngressAnnotations/networking-disabled-snippet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/configuration-snippet: ""
  labels:
    ccloud/support-group: foo-group
    ccloud/service: dummy
