common/gatekeeper-policies/tests/fixtures/GkIngressAnnotations/networking-pass.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-request-buffering: "off"
  labels:
    ccloud/support-group: foo-group
    ccloud/service: dummy
